--- a/core/tsconfig.json
+++ b/core/tsconfig.json
@@ -17,7 +17,8 @@
 		"resolveJsonModule": true,
 		"allowJs": true,
 		"checkJs": true,
-		"isolatedModules": true
+		"isolatedModules": true,
+		"strict": false
 	},
 	"include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.js", "src/**/*.svelte"],
 	"references": [{ "path": "./tsconfig.node.json" }]
