--- a/core/package.json
+++ b/core/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "hati2diinternet",
+	"name": "archillect",
 	"private": true,
 	"version": "1.1.1",
 	"type": "module",
@@ -22,11 +22,11 @@
 		"prettier-plugin-svelte": "^3.2.7",
 		"prettier-plugin-tailwindcss": "^0.6.8",
 		"svelte": "^4.2.19",
-		"svelte-check": "^4.0.4",
+		"svelte-check": "^4.0.5",
 		"tailwindcss": "^3.4.13",
 		"tslib": "^2.7.0",
 		"typescript": "^5.6.3",
-		"vite": "^5.4.8"
+		"vite": "^5.4.9"
 	},
 	"dependencies": {
 		"@fontsource-variable/jetbrains-mono": "^5.1.1",
