--- a/core/.gitpod.yml
+++ b/core/.gitpod.yml
@@ -1,3 +1,15 @@
+image: gitpod/workspace-bun
+
 tasks:
-  - init: bun install 
-    command: bun run dev
+  - name: Init a bun project and run
+    init: |
+      # Init a project if needed
+      if test ! -e package.json; then {
+        bun init -y
+      } fi
+      # Install dependencies
+      bun install
+      
+    command: |
+      # Run project
+      bun run dev
